# reaction-diffusion-model

./: .gitignore  CMakeLists.txt  Config.hpp  README.md  Renderer.cpp  Renderer.hpp  Shaders.metal  arg-config.cpp  arg-config.hpp  args.hpp  main.mm  notes.txt  release.sh
pattern-confs/: pearson.json
release/_CPack_Packages/Darwin/ZIP/ReactionDiffusionModel-Release/: ReactionDiffusionModel  default.metallib
